force-app/main/default/objects/Candidate__c/fields/Academic_Results__c.field-meta.xml
<CustomField>
    <fullName>Academic_Results__c</fullName>
    <label>Academic Results</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>