force-app/main/default/objects/Candidate__c/fields/AI_Updated_Fields__c.field-meta.xml
<CustomField>
    <fullName>AI_Updated_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AI Updated Fields</label>
    <type>Checkbox</type>
</CustomField>