force-app/main/default/objects/Candidate__c/fields/Candidate_Code__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Code__c</fullName>
    <label>Candidate Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>