force-app/main/default/objects/Candidate__c/fields/Candidate_Link__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, &quot;Link to Candidate&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Link</label>
    <type>Text</type>
</CustomField>