force-app/main/default/objects/Candidate__c/fields/Candidate_Type__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Type__c</fullName>
    <label>Candidate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>