force-app/main/default/objects/Candidate__c/fields/Career_Goals__c.field-meta.xml
<CustomField>
    <fullName>Career_Goals__c</fullName>
    <label>Career Goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>