force-app/main/default/objects/Candidate__c/fields/Cost_To_Company__c.field-meta.xml
<CustomField>
    <fullName>Cost_To_Company__c</fullName>
    <label>Cost To Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>