force-app/main/default/objects/Candidate__c/fields/Current_Field_of_Study__c.field-meta.xml
<CustomField>
    <fullName>Current_Field_of_Study__c</fullName>
    <label>Current Field of Study</label>
    <length>255</length>
    <type>Text</type>
</CustomField>