force-app/main/default/objects/Candidate__c/fields/Current_Total_Cost_To_Company__c.field-meta.xml
<CustomField>
    <fullName>Current_Total_Cost_To_Company__c</fullName>
    <label>Current Total Cost To Company</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>