force-app/main/default/objects/Candidate__c/fields/Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Year__c</fullName>
    <label>Current Year</label>
    <length>24</length>
    <type>Text</type>
</CustomField>