force-app/main/default/objects/Candidate__c/fields/CV_Title__c.field-meta.xml
<CustomField>
    <fullName>CV_Title__c</fullName>
    <label>CV Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>