force-app/main/default/objects/Candidate__c/fields/Date_Academic_Transcript_Issue__c.field-meta.xml
<CustomField>
    <fullName>Date_Academic_Transcript_Issue__c</fullName>
    <label>Date Academic Transcript Issue</label>
    <type>Date</type>
</CustomField>