force-app/main/default/objects/Candidate__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>Education</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>