force-app/main/default/objects/Candidate__c/fields/Matric_Exemption__c.field-meta.xml
<CustomField>
    <fullName>Matric_Exemption__c</fullName>
    <label>Matric Exemption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>