force-app/main/default/objects/Candidate__c/fields/Matric_Results__c.field-meta.xml
<CustomField>
    <fullName>Matric_Results__c</fullName>
    <label>Matric Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>