force-app/main/default/objects/Candidate__c/fields/Met_Minumum_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Met_Minumum_Requirements__c</fullName>
    <label>Met Minumum Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>