force-app/main/default/objects/Candidate__c/fields/Prefer_Working_Inhouse_Or_Consulting__c.field-meta.xml
<CustomField>
    <fullName>Prefer_Working_Inhouse_Or_Consulting__c</fullName>
    <label>Prefer Working Inhouse Or Consulting</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>