force-app/main/default/objects/Candidate__c/fields/Profesional_Experience__c.field-meta.xml
<CustomField>
    <fullName>Profesional_Experience__c</fullName>
    <label>Profesional Experience</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>