force-app/main/default/objects/Candidate__c/fields/Reason_for_leaving_current_role__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_leaving_current_role__c</fullName>
    <label>Reason for leaving current role</label>
    <type>TextArea</type>
</CustomField>