force-app/main/default/objects/Candidate__c/fields/Socials__c.field-meta.xml
<CustomField>
    <fullName>Socials__c</fullName>
    <label>Socials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>