force-app/main/default/objects/Candidate__c/fields/Student_Number__c.field-meta.xml
<CustomField>
    <fullName>Student_Number__c</fullName>
    <label>Student Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>