force-app/main/default/objects/Candidate__c/fields/University_Academic_Results__c.field-meta.xml
<CustomField>
    <fullName>University_Academic_Results__c</fullName>
    <label>University Academic Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>