force-app/main/default/objects/Candidate__c/fields/University_Average__c.field-meta.xml
<CustomField>
    <fullName>University_Average__c</fullName>
    <label>University Average</label>
    <length>255</length>
    <type>Text</type>
</CustomField>