force-app/main/default/objects/Candidate__c/fields/Willing_to_work_Contract_Work__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_work_Contract_Work__c</fullName>
    <label>Willing to work Contract Work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>