force-app/main/default/objects/Candidate__c/recordTypes/Full_Time.recordType-meta.xml
<RecordType>
    <fullName>Full_Time</fullName>
    <active>true</active>
    <label>Full Time</label>
</RecordType>